# m1-fintech-cli

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
application/ports/: dataset_repository.py  transaction_validator.py
application/use_cases/: analyze_dataset.py  validate_transaction.py
docs/: hexagonal_arch_m1.html
domain/: constants.py  exceptions.py  models.py  value_objects.py
infrastructure/: transaction_validator_impl.py
infrastructure/persistence/: csv_dataset_repository.py
notebooks/: exploration_telco.ipynb
tests/: conftest.py
tests/integration/: test_csv_dataset_repository.py
tests/unit/: test_analyze_dataset.py  test_transaction.py  test_transaction_validator_impl.py  test_validate_transaction_use_case.py
